--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             <div class="footer-distributed">
                 <div class="footer-center">                   
                     <p class="footer-company-name"><a href="">Merry Christmass and Happy New Year to you.  From FRIDOLIN</a></p>
-                </div>
+              <p> <div class="img-wrap d-flex align-items-stretch">
+		</p>						<div class="img align-self-stretch" style="background-image: url(images/tree.jpg);"></div>
+							
+</div>
+ </div>
             </div>
         </div><!-- end container -->
     </div><!-- end copyrights -->
