--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-center">                   
-                    <p class="footer-company-name"><a href="">Merry Christmass and Happy New Year to you.  From FRIDOLIN</a></p>
-              <p> <div class="img-wrap d-flex align-items-stretch">
-		</p>						<div class="img align-self-stretch" style="background-image: url(images/tree.jpg);"></div>
-							
-</div>
+                    <p class="footer-company-name"><a href=""><font color="black"><b>Merry Christmass and Happy New Year to you.  From FRIDOLIN</b></font></a></p>
+              	<p><div align="center"><img src="images/tree.jpg" alt="logo" style="width:50%"></a></div></p>
+				
  </div>
             </div>
         </div><!-- end container -->
