--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         <div class="container">
             <div class="footer-distributed">
                 <div class="footer-center">                   
-                    <p class="footer-company-name"><a href=""><font color="black"><b>Merry Christmass and Happy New Year to you.  From FRIDOLIN</b></font></a></p>
+                    <p class="footer-company-name"><a href=""><font color="black"><b>"Merry Christmass and Happy New Year to you".</p>
+<p>  From FRIDOLIN</b></font></a></p>
               	<p><div align="center"><img src="images/tree.jpg" alt="logo" style="width:50%"></a></div></p>
 				
  </div>
