--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
  
      <!-- Site Metas -->
-    <title>Merry Christmass</title>  
+    <title>Question</title>  
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -40,8 +40,7 @@
 </head>
 <body class="host_version"> 
 
-	Click <a href="Tel:+255-683-168429>Ask Now</a>
-    
+	
 	<!-- END LOADER -->	
 	
     <footer class="footer">
