--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
 </head>
 <body class="host_version"> 
-
+                            <center>
+Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
+          </center>                       
 	
 	<!-- END LOADER -->	
 	
