--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
 </head>
-<body class="host_version"> 
+<body> 
+<center>
+Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
+          </center>
                                                    
 	
 	<!-- END LOADER -->	
