--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+
+<p><u><b>Any Question?</u></p>
+<p>We are here to listen </p>
+
 <center>
 Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
