--- a/index.html
+++ b/index.html
@@ -37,12 +37,10 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-<p><u><b>Any Question?</u></p>
+<p><center><u><b>Any Question?</u></p>
 <p>We are here to listen </p>
+</center>
 
-<center>
-Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
-          </center>
 </head>
 <body> 
 <center>
