--- a/index.html
+++ b/index.html
@@ -46,7 +46,13 @@
 <center>
 Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
-                                                   
+
+
+<p><center><b>UPDATES</b></p>
+
+</center></p>
+											       </body>
+	
 	
 	<!-- END LOADER -->	
 	
