--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@ Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b>
 <p><center><b>UPDATES</b></p>
 
 </center></p>
+	<center><p><ul>
+     <li> <a href="softgeneration.pdf"><font color="black" size=2><i><b>Poster</b></i></font></a></li>
+	</ul></center>
 											       </body>
 	
 	
