--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b>
           </center>
 
 
-<p><div align="left"><b>UPDATES</b> (To View Use Password 👉 <b>88fridolin</b>)</p>
+<p><div align="left"><b>UPDATES</b> <font size=2>(To View Use Password 👉 <b>88fridolin</b>)</font></p>
 
 </div></p>
 	<div align="left"><p><ul>
