--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@ Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b>
 </div></p>
 	<div align="left"><p><ul>
      <li> <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a></li>
-	</ul></div>
+	
+	<li> <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a></li>
+	
+	    
+	    </ul></div>
 											       </body>
 	
 	
