--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b>
 	<div align="left"><p><ul>
      <li> <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a></li>
 	
-	<li> <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a></li>
+	<li> <a href="vacancy.pdf"><font color="black" size=2><i><b>Vacancy Post</b></i></font></a></li>
 	
 	    
 	    </ul></div>
