--- a/index.html
+++ b/index.html
@@ -59,7 +59,10 @@ Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b>
 	    
 	    </ul></div>
 											       </body>
-	
+	<hr>
+
+	<p><center><a href="https://fmpiza.github.io/webfridolin"><font size=2 color="green">Home</font></a></center></p>
+
 	
 	<!-- END LOADER -->	
 	
