--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 <body> 
 <center>
-Click to <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
+Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
 
 
