--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
      <li> <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a></li>
 	
 	<li> <a href="vacancy.pdf"><font color="black" size=2><i><b>Vacancy Post</b></i></font></a></li>
+	<li> <a href="catalogue.pdf"><font color="blue" size=2><i><b>Price List / Catalogue</b></i></font></a></li>
 	
 	    
 	    </ul></div>
