--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 	<li> <a href="catalogue.pdf"><font color="blue" size=2><i><b>Price List / Catalogue</b></i></font></a></li>
 	
 	    <li> <a href="payment.pdf"><font color="black" size=2><i><b>Customer Policy</b></i></font></a></li>
+	    <li> <a href="contacts.pdf"><font color="blue" size=2><i><b>Our Contacts</b></i></font></a></li>
 	
+	    
 	    
 	    </ul></div>
 											       </body>
