--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 	    <li> <a href="contacts.pdf"><font color="blue" size=2><i><b>Our Contacts</b></i></font></a></li>
 	
 	    <li> <a href="announcement.pdf"><font color="black" size=2><i><b>Tangazo / Announcement</b></i></font></a></li>
+	<li> <a href="server.pdf"><font color="blue" size=2><i><b>Tangazo / Announcement Successful Server Upgrading</b></i></font></a></li>
 	
 	    
 	    
