--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
 <center>
 Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
+<center>👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Chat with Me</b></font></a>
+          </center>
 
 
 <p><div align="left"><b>UPDATES</b> <font size=2>(To View, Use Password 👉 <b>88fridolin</b>)</font></p>
