--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 <center>
 Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
-<center>👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b><span id="boot-icon" class="bi bi-chat-text" style="font-size: 38px;"></span> Chat with Me</b></font></a>
+<center> <font size=3 color="green"><b>Chat with Me</b></font>
+ 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b><span id="boot-icon" class="bi bi-chat-text" style="font-size: 38px;"></span> Chat with Me</b></font></a>
           </center>
 
 
