--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</b></font></a>
           </center>
 <center> <font size=3 color="green"><b>Chat</b></font>
- 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b><span id="boot-icon" class="bi bi-chat-text" style="font-size: 38px;"></span> 📩 </b></font></a>
+ 👉 <a href="https://wa.me/255683168429"><font size=3 color="green"><b><span id="boot-icon" class="bi bi-chat-text" style="font-size: 38px;"></span> 📩 </b></font></a>
           </center>
 
 
