--- a/index.html
+++ b/index.html
@@ -55,18 +55,18 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 
 </div></p>
 	<div align="left"><p><ul>
-		<li> <a href="systems.pdf"><font color="black" size=2><i><b>Developed Customer's Systems / Softwares</b></i></font></a></li>
-	
+		
      <li> <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a></li>
+	<li> <a href="systems.pdf"><font color="black" size=2><i><b>Customer's Systems / Softwares</b></i></font></a></li>
 	
-	<li> <a href="vacancy.pdf"><font color="black" size=2><i><b>Vacancy Post</b></i></font></a></li>
-	<li> <a href="catalogue.pdf"><font color="blue" size=2><i><b>Price List / Catalogue</b></i></font></a></li>
+	<li> <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a></li>
+	<li> <a href="catalogue.pdf"><font color="black" size=2><i><b>Price List / Catalogue</b></i></font></a></li>
 	
-	    <li> <a href="payment.pdf"><font color="black" size=2><i><b>Customer Policy</b></i></font></a></li>
-	    <li> <a href="contacts.pdf"><font color="blue" size=2><i><b>Our Contacts</b></i></font></a></li>
+	    <li> <a href="payment.pdf"><font color="blue" size=2><i><b>Customer Policy</b></i></font></a></li>
+	    <li> <a href="contacts.pdf"><font color="black" size=2><i><b>Our Contacts</b></i></font></a></li>
 	
-	    <li> <a href="announcement.pdf"><font color="black" size=2><i><b>Tangazo / Announcement</b></i></font></a></li>
-	<li> <a href="server.pdf"><font color="blue" size=2><i><b>Tangazo / Successful Server Upgrading</b></i></font></a></li>
+	    <li> <a href="announcement.pdf"><font color="blue" size=2><i><b>Tangazo / Announcement</b></i></font></a></li>
+	<li> <a href="server.pdf"><font color="black" size=2><i><b>Tangazo / Successful Server Upgrading</b></i></font></a></li>
 	
 	    
 	    
