--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 											       </body>
 	<hr>
 
-	<p><center><a href="https://fmpiza.github.io/webfridolin"><font size=2 color="green">Home</font></a></center></p>
+	<p><center>🌐 <a href="https://fmpiza.github.io/webfridolin"><font size=2 color="green">fmpiza.github.io/webfridolin</font></a></center></p>
 
 	
 	<!-- END LOADER -->	
