--- a/index.html
+++ b/index.html
@@ -56,19 +56,19 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 </div></p>
 	<div align="left"><p><ul>
 		
-     <li>🔑 <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a> <font color="black" size=1>(Posted on 13 April,2023)</font></li>
-	<li>🔑 <a href="softwares.pdf"><font color="black" size=2><i><b>Customer's Systems / Softwares</b></i></font></a> <font color="black" size=1>(Posted on 15 July,2023)</font></li>
+     <li>🔑 <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a> <font color="black" size=1>(13 April,2023)</font></li>
+	<li>🔑 <a href="softwares.pdf"><font color="black" size=2><i><b>Customer's Systems / Softwares</b></i></font></a> <font color="black" size=1>(15 July,2023)</font></li>
 	
-	<li>🔑 <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a> <font color="black" size=2>(Posted on 01 May,2023)</font></li>
-	<li>🔑 <a href="catalogue.pdf"><font color="black" size=2><i><b>Price List / Catalogue</b></i></font></a> <font color="black" size=1>(Posted on 05 July,2023)</font></li>
+	<li>🔑 <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a> <font color="black" size=1>(01 May,2023)</font></li>
+	<li>🔑 <a href="catalogue.pdf"><font color="black" size=2><i><b>Price List / Catalogue</b></i></font></a> <font color="black" size=1>(July,2023)</font></li>
 	
-	    <li>🔑 <a href="payment.pdf"><font color="blue" size=2><i><b>Customer Policy</b></i></font></a></li>
-	    <li>🔑 <a href="contacts.pdf"><font color="black" size=2><i><b>Our Contacts</b></i></font></a></li>
+	    <li>🔑 <a href="payment.pdf"><font color="blue" size=2><i><b>Customer Policy</b></i></font></a> <font color="black" size=1>(17 June,2023)</font></li>
+	    <li>🔑 <a href="contacts.pdf"><font color="black" size=2><i><b>Our Contacts</b></i></font></a> <font color="black" size=1>(21 Dec,2022)</font></li>
 	
-	    <li>🔑 <a href="announcement.pdf"><font color="blue" size=2><i><b>Tangazo / Announcement</b></i></font></a></li>
+	    <li>🔑 <a href="announcement.pdf"><font color="blue" size=2><i><b>Tangazo / Announcement</b></i></font></a> <font color="black" size=1>(14 July,2023)</font></li>
 	<li>🔑 <a href="server.pdf"><font color="black" size=2><i><b>Tangazo / Successful Server Upgrading</b></i></font></a></li>
 	
-	     <li>🔑 <a href="customeralert.pdf"><font color="blue" size=2><i><b>Tangazo / Customer Bandwidth</b></i></font></a> <font color="black" size=1>(Posted on 26 July,2023)</font></li>
+	     <li>🔑 <a href="customeralert.pdf"><font color="blue" size=2><i><b>Tangazo / Customer Bandwidth</b></i></font></a> <font color="black" size=1>(26 July,2023)</font></li>
 	   
 	    
 	    </ul></div>
