--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 	<li>🔑 <a href="softwares.pdf"><font color="black" size=2><i><b>Customer's Systems / Softwares</b></i></font></a> <font color="black" size=1>(15 July,2023)</font></li>
 	
 	<li>🔑 <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a> <font color="black" size=1>(01 May,2023)</font></li>
-	<li>🔑 <a href="catalogue.pdf"><font color="black" size=2><i><b>Price List / Catalogue</b></i></font></a> <font color="black" size=1>(July,2023)</font></li>
+	<li>🔑 <a href="catalogue.pdf"><font color="black" size=2><i><b>Price List / Catalogue</b></i></font></a> <font color="black" size=1>(04 June,2022)</font></li>
 	
 	    <li>🔑 <a href="payment.pdf"><font color="blue" size=2><i><b>Customer Policy</b></i></font></a> <font color="black" size=1>(17 June,2023)</font></li>
 	    <li>🔑 <a href="contacts.pdf"><font color="black" size=2><i><b>Our Contacts</b></i></font></a> <font color="black" size=1>(21 Dec,2022)</font></li>
