--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 	<li>🔑 <a href="server.pdf"><font color="black" size=2><i><b>Tangazo / Successful Server Upgrading</b></i></font></a></li>
 	
 	     <li>🔑 <a href="customeralert.pdf"><font color="blue" size=2><i><b>Tangazo / Customer Bandwidth</b></i></font></a> <font color="black" size=1>(26 July,2023)</font></li>
-	   <li>🔑 <a href="customeralert.pdf"><font color="black" size=2><i><b>Computer Network Hints</b></i></font></a> <font color="black" size=1>(26 July,2023)</font></li>
+	   <li>🔑 <a href="network.pdf"><font color="black" size=2><i><b>Computer Network Hints</b></i></font></a> <font color="black" size=1>(26 July,2023)</font></li>
 	   
 	    
 	    </ul></div>
