--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Click 👉 <a href="tel:+255-683-168429"><font size=3 color="green"><b>Ask Now</
 </div></p>
 	<div align="left"><p><ul>
 		
-     <li>🔑 <a href="softgeneration.pdf"><font color="blue" size=2><i><b>Poster</b></i></font></a> <font color="black" size=1>(13 April,2023)</font></li>
+     <li>🔑 <a href="posters.pdf"><font color="blue" size=2><i><b>Posters</b></i></font></a> <font color="black" size=1>(13 April,2023)</font></li>
 	<li>🔑 <a href="softwares.pdf"><font color="black" size=2><i><b>Customer's Systems / Softwares</b></i></font></a> <font color="black" size=1>(15 July,2023)</font></li>
 	
 	<li>🔑 <a href="vacancy.pdf"><font color="blue" size=2><i><b>Vacancy Post</b></i></font></a> <font color="black" size=1>(01 May,2023)</font></li>
